{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 433,
  "lineage": "210da581-bbdb-2ef0-a680-e099f630554e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009a4ecf40bbed17f",
            "domain": "vpc",
            "id": "eipalloc-009a4ecf40bbed17f",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-221-99.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.221.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "user09-eip"
            },
            "tags_all": {
              "Name": "user09-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009a4ecf40bbed17f",
            "association_id": "eipassoc-0cace46c02d16b358",
            "connectivity_type": "public",
            "id": "nat-090b4c2168b4ccdff",
            "network_interface_id": "eni-04b5232960fa7a5ba",
            "private_ip": "10.9.1.222",
            "public_ip": "13.209.221.99",
            "subnet_id": "subnet-01f8dfe4bd8a5276d",
            "tags": {
              "Name": "user09-nat-gw"
            },
            "tags_all": {
              "Name": "user09-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03258a86bdcedb1591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-090b4c2168b4ccdff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03258a86bdcedb159",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107781634686:route-table/rtb-03258a86bdcedb159",
            "id": "rtb-03258a86bdcedb159",
            "owner_id": "107781634686",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "user09-private-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user09-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0759e33537933b639"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0032bbebd723e1209",
            "route_table_id": "rtb-03258a86bdcedb159",
            "subnet_id": "subnet-07720a54e9c129876"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f07329b11e18b09e",
            "route_table_id": "rtb-03258a86bdcedb159",
            "subnet_id": "subnet-06acb2cef669793d9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107781634686:security-group/sg-037b63a70b0003699",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037b63a70b0003699",
            "ingress": [],
            "name": "user09-admin-sg",
            "name_prefix": "",
            "owner_id": "107781634686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "user09-admin-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user09-admin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0759e33537933b639"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "13.124.106.209/32"
            ],
            "description": "Allow SSH for admin",
            "from_port": 22,
            "id": "sgrule-4141528124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-037b63a70b0003699",
            "security_group_rule_id": "sgr-06e97f1fc034fbff2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107781634686:subnet/subnet-07720a54e9c129876",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.9.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07720a54e9c129876",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107781634686",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user09-private-subnet-0"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user09-private-subnet-0"
            },
            "vpc_id": "vpc-0759e33537933b639"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:107781634686:subnet/subnet-06acb2cef669793d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.9.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06acb2cef669793d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107781634686",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user09-private-subnet-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user09-private-subnet-1"
            },
            "vpc_id": "vpc-0759e33537933b639"
          }
        }
      ]
    }
  ]
}